<resources>
    <string name="app_name">BudgEat</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">M\'inscrire</string>
    <string name="ou">ou</string>
    <string name="Infos">Infos</string>
    <string name="commander">Commander</string>
    <string name="addOrder">Ajouter un sandwich</string>
    <string name="load_error">Erreur</string>
    <string name="promesse">Promesse</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="app_intro">Bienvenue</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_receit">ReceitActivity</string>
    <string name="reOrder">Recommencer la commmande</string>
    <string name="payer">Payement</string>
    <string name="valider">Valider payement</string>
    <string name="fragment_test">coucou</string>
    <string name="me_connecter">ME CONNECTER</string>
    <string name="card_number">numéro de carte</string>
    <string name="peremption_date">DD</string>
    <string name="peremptionMonth">MM</string>
    <string name="cryptogramme">cryptogramme</string>
    <string name="heh">¯\\_(ツ)_/¯</string>
    <string name="come_back">Les commandes ne sont plus disponible, revenez à 14h.</string>
    <string name="reduction">23%</string>
    <string name="currentPrice">soit : 5€20</string>
    <string name="commandNumber">162</string>
    <string name="textCommandNumber">numéro de la commande</string>
    <string name="h12">12h</string>
    <string name="retirementHour">Heure de retrait</string>
    <string name="je_commande">je commande</string>
    <string name="commande_en_cours">Commande en cours :</string>
    <string name="r_duction">Réduction</string>
    <string name="total">Total</string>
    <string name="voir_mon_bon_de_retrait">Voir mon bon de retrait</string>
</resources>
