<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.serious.budgeat.Activity.PaymentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardNumber"
            android:inputType="number"
            android:hint="@string/card_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/peremptionMonth"
                android:inputType="date"
                android:hint="@string/peremption_date"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/peremptionYear"
                android:hint="@string/peremptionMonth"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cryptogramme"
                android:inputType="number"
                android:hint="@string/cryptogramme"
                android:layout_weight="2"/>

        </LinearLayout>

        <Button
            android:id="@+id/sendPayment"
            android:textColor="#FFFFFF"
            android:text="@string/valider"
            android:textSize="15sp"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_connection"
            />

    </LinearLayout>


</RelativeLayout>
