<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.serious.budgeat.Activity.CardActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/breadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/meatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cheeseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vegetableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonPayment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".45"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".10"
                android:text="@string/ou"
                android:textAlignment="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".45"
                android:background="@android:color/black" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonReOrder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reOrder" />


    </LinearLayout>

</RelativeLayout>
