<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connexion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.serious.budgeat.Activity.LandingActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/buttonConnexion"
            android:text="@string/me_connecter"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:background="@drawable/button_shape_connection"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <View
                android:layout_weight=".45"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_width="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:layout_weight=".10"
                android:textAlignment="center"
                />

            <View
                android:layout_weight=".45"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_width="0dp" />


        </LinearLayout>

        <Button
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:text="@string/inscription"
            android:id="@+id/buttonInscription"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:background="@drawable/button_shape_inscription"
            />
    </LinearLayout>



</RelativeLayout>
